objects/UNITY_Vendor_Covered_Location__c.object
<CustomObject>
    <description>UNITY project - Stores vendor coverage by location. One record per vendor site per Postal code zone, uniquely identified by country code and 3 digit postal code prefix, e.g. US-070</description>
    <fields>
        <fullName>Location_Key__c</fullName>
        <description>2 Letter Country Code + &apos;-&apos; + 3 Letter Postal Code Prefix</description>
        <externalId>true</externalId>
        <inlineHelpText>Please enter in the format of 2 Letter Country Code + &apos;-&apos; + 3 Letter Postal Code Prefix</inlineHelpText>
        <label>Location Key</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Vendor_Covered_Loc_Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>UNITY Vendor Covered Loc Ext Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Covered Locations</relationshipLabel>
        <relationshipName>Vendor_Covered_Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Vendor Covered Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Location_Key__c</columns>
        <columns>Vendor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>VL-{0000000}</displayFormat>
        <label>Vendor Covered Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Covered Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>